force-app/main/default/objects/User_Feature_Flag__c/User_Feature_Flag__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>User Feature Flag</label>
</CustomObject>