force-app/main/default/objects/User_Feature_Flag__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Toggle this OFF to temporarily disable this record, without deleting it entirely.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>