force-app/main/default/objects/User_Feature_Flag__c/fields/Category_Opt_OUT__c.field-meta.xml
<CustomField>
    <fullName>Category_Opt_OUT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Opt out of whole categories of features.  T=Trigger,P=Process Builder,F=Flow. Optionally, narrow to specific objects. EG: T,PB - OR - T.Opportunity,T.Contact,PB.Case</inlineHelpText>
    <label>Category Opt OUT</label>
    <type>TextArea</type>
</CustomField>