force-app/main/default/objects/User_Feature_Flag__c/fields/Feature_Opt_OUT__c.field-meta.xml
<CustomField>
    <fullName>Feature_Opt_OUT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Opt out of specific features, by using their codes. Specific codes override category opt-ins/outs. EG: TOBI,TOBU</inlineHelpText>
    <label>Feature Opt OUT</label>
    <type>TextArea</type>
</CustomField>